WIP: Implement eth/70
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>